Kleine Ergänzung auf dem Titelblatt

--- a/00_main.tex
+++ b/00_main.tex
@@ -86,15 +86,15 @@ Das originale Template (the Legrand Orange Book Template) kann hier heruntergela
 
 
 %----------------------------------------------------------------------------------------
-%	PART1
-\part{PART 1}
+%  Teil 1
+\part{TEIL 1}
 %----------------------------------------------------------------------------------------
 
 \input{01_einleitung.tex} 
 
 %----------------------------------------------------------------------------------------
 %	Part 2: Format Examples (to be deleted in final/release version)
-\part{PART 2}
+\part{TEIL 2}
 %----------------------------------------------------------------------------------------
 
 \chapterimage{Pictures/iStock/HKA_EIT_Digitaltechnik_2.jpg} % Chapter heading image
