--- a/customcommands.tex
+++ b/customcommands.tex
@@ -55,7 +55,7 @@
 		
 	%%% Text Blocks %%%
 		% HKA, University of Applied Science
-		\node[text width = 10cm, ThemeColor, below right] at (UoAS) {\textbf{Hochschule Karlsruhe}\\University of\\Applied Science};
+		\node[text width = 10cm, ThemeColor, below right] at (UoAS) {\textbf{Hochschule Karlsruhe}\\University of\\Applied Sciences};
 		% Faculty
 		\node[text width = 10cm, ThemeColor, below right] at (Faculty) {Fakultät für\\ \textbf{#1}};
 		% Title and Subtitle 
