--- a/customcommands.tex
+++ b/customcommands.tex
@@ -53,24 +53,24 @@
 	%%% Colored, 3cm high, Box under Picture %%%
 		\path[fill=ThemeColor] (current page.south west) rectangle ($ (current page.south east) + (0,3) $);
 		
-	%%% Text Blocks %%%
+		%%% Text Blocks %%%
 		% HKA, University of Applied Science
-		\node[text width = 10cm, ThemeColor, below right] at (UoAS) {\textbf{Hochschule Karlsruhe}\\University of\\Applied Sciences};
+		\node[text width = 10cm, ThemeColor, below right] at (UoAS) {\avantfont{\textbf{Hochschule Karlsruhe}}\\ \avantfont{University of}\\ \avantfont{Applied Sciences}};
 		% Faculty
-		\node[text width = 10cm, ThemeColor, below right] at (Faculty) {Fakultät für\\ \textbf{#1}};
+		\node[text width = 10cm, ThemeColor, below right] at (Faculty) {\avantfont{Fakultät für}\\ \avantfont{\textbf{#1}}};
 		% Title and Subtitle 
 		\node[text width = 10cm, ThemeColor, above right] at (Title) {#2};
 		% Authors
 		\node[text width = 10cm, white, right] at (Authors) {{\large #3}};
 		
-	%%% +| KA %%%
+		%%% +| KA %%%
 		% overlay HKA picture to draw the nodes CAUTION!!! TikzEdt has for whatever reason no permission to edit files unter windows in ...\Program Files\ directory. 
 		% If the picture is not loading, try moving .text and .png file in another directory, e.g. \Downloads\
 		% ++ refers to the Node last mentioned before. + does the same thing, without setting the current node as new "last mentiones node"
-		\path (H) [fill=ThemeColor, scale = 0.45, rounded corners = 3] +(0,-2.95)  -- +(3,-2.95) -- +(3,0) -- +(4.2,0)  -- +(4.2,-2.95) -- +(7.2,-2.95) -- +(7.2,-3.95) -- +(4.2,-3.95) -- +(4.2,-6.9) -- +(3,-6.9) -- +(3,-3.95) -- +(0,-3.95) -- cycle;
-		\path (H) [fill=ThemeColor, scale = 0.45, rounded corners = 3] +(7.8,0)  -- +(9,0) -- +(9,-6.9) -- +(7.8,-6.9) -- cycle;
-		\path (K) [fill=ThemeColor, scale = 0.45, rounded corners = 3] +(3, 0) -- +(4.2,0) -- +(4.2,-2.8) -- +(9,0) -- +(9,-1.3) -- +(5.2,-3.45) -- +(9,-5.6) -- +(9,-6.9) -- +(4.2,-4.1) -- +(4.2,-6.9) -- +(3,-6.9) -- cycle;
-		\path (A) [fill=ThemeColor, scale = 0.45, rounded corners = 3] +(6, 0) -- +(6.65,0) -- +(10.05,-6.9) -- +(8.75,-6.9) -- +(6,-1.3) -- +(4.8,-3.7) -- +(7.52,-3.7) -- +(8.85,-4.8) -- +(4.3,-4.8) -- +(3.25,-6.9) -- +(1.95,-6.9) -- +(5.35,0) -- cycle;
+		\path (H) [fill=ThemeColor, scale = 0.45, rounded corners = 1] +(0,-2.95)  -- +(3,-2.95) -- +(3,0) -- +(4.2,0)  -- +(4.2,-2.95) -- +(7.2,-2.95) -- +(7.2,-3.95) -- +(4.2,-3.95) -- +(4.2,-6.9) -- +(3,-6.9) -- +(3,-3.95) -- +(0,-3.95) -- cycle;
+		\path (H) [fill=ThemeColor, scale = 0.45, rounded corners = 1] +(7.8,0)  -- +(9,0) -- +(9,-6.9) -- +(7.8,-6.9) -- cycle;
+		\path (K) [fill=ThemeColor, scale = 0.45, rounded corners = 1] +(3, 0) -- +(4.2,0) -- +(4.2,-2.8) -- +(9,0) -- +(9,-1.3) -- +(5.2,-3.45) -- +(9,-5.6) -- +(9,-6.9) -- +(4.2,-4.1) -- +(4.2,-6.9) -- +(3,-6.9) -- cycle;
+		\path (A) [fill=ThemeColor, scale = 0.45, rounded corners = 1] +(6, 0) -- +(6.65,0) -- +(10.05,-6.9) -- +(8.75,-6.9) -- +(6,-1.3) -- +(4.8,-3.7) -- +(7.52,-3.7) -- +(8.85,-4.8) -- +(4.3,-4.8) -- +(3.25,-6.9) -- +(1.95,-6.9) -- +(5.35,0) -- cycle;
 		
 		
 	%%% might be usefull later: %%%
