--- a/structure.tex
+++ b/structure.tex
@@ -500,7 +500,7 @@ innerbottommargin=5pt]{cBox}
 \node at (current page.north west)
 {\begin{tikzpicture}[remember picture,overlay]
 \node[anchor=north west,inner sep=0pt] at (0,0) {\ifusechapterimage\includegraphics[width=\paperwidth]{\thechapterimage}\fi};
-\draw[anchor=west] (\Gm@lmargin+.3cm,-9cm) node [line width=0pt,rounded corners=0pt,draw=white,fill=white,fill opacity=1,inner sep=7.5pt] {\huge\sffamily\bfseries\color{black}\thechapter\autodot~#1\strut};
+\draw[anchor=west] (\Gm@lmargin-1cm,-9cm) node [line width=0pt,rounded corners=0pt,draw=white,fill=white,fill opacity=1,inner sep=7.5pt] {\huge\sffamily\bfseries\color{black}\thechapter\autodot~#1\strut};
 \end{tikzpicture}};
 \end{tikzpicture}
 \else
@@ -508,7 +508,7 @@ innerbottommargin=5pt]{cBox}
 \node at (current page.north west)
 {\begin{tikzpicture}[remember picture,overlay]
 \node[anchor=north west,inner sep=0pt] at (0,0) {\ifusechapterimage\includegraphics[width=\paperwidth]{\thechapterimage}\fi};
-\draw[anchor=west] (\Gm@lmargin+.3cm,-9cm) node [line width=0pt,rounded corners=0pt,draw=white,fill=white,fill opacity=1,inner sep=7.5pt] {\huge\sffamily\bfseries\color{black}#1\strut};
+\draw[anchor=west] (\Gm@lmargin-1cm,-9cm) node [line width=0pt,rounded corners=0pt,draw=white,fill=white,fill opacity=1,inner sep=7.5pt] {\huge\sffamily\bfseries\color{black}#1\strut};
 \end{tikzpicture}};
 \end{tikzpicture}
 \fi\fi\par\vspace*{270\p@}}}
@@ -520,7 +520,7 @@ innerbottommargin=5pt]{cBox}
 \node at (current page.north west)
 {\begin{tikzpicture}[remember picture,overlay]
 \node[anchor=north west,inner sep=0pt] at (0,0) {\ifusechapterimage\includegraphics[width=\paperwidth]{\thechapterimage}\fi};
-\draw[anchor=west] (\Gm@lmargin+.3cm,-9cm) node [line width=0pt,rounded corners=0pt,draw=white,fill=white,fill opacity=1,inner sep=7.5pt] {\huge\sffamily\bfseries\color{black}#1\strut};
+\draw[anchor=west] (\Gm@lmargin-1cm,-9cm) node [line width=0pt,rounded corners=0pt,draw=white,fill=white,fill opacity=1,inner sep=7.5pt] {\huge\sffamily\bfseries\color{black}#1\strut};
 \end{tikzpicture}};
 \end{tikzpicture}
 \par\vspace*{270\p@}}
