--- a/customcommands.tex
+++ b/customcommands.tex
@@ -1,4 +1,28 @@
 %----------------------------------------------------------------------------------------
+%	VARIOUS REQUIRED PACKAGES AND CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+
+\usepackage{graphicx} % Required for including pictures
+\graphicspath{{Pictures/}} % Specifies the directory where pictures are stored
+
+\usepackage{lipsum} % Inserts dummy text
+
+\usepackage{tikz} % Required for drawing custom shapes
+
+\usepackage[german]{babel} % german language/hyphenation
+
+\usepackage{enumitem} % Customize lists
+\setlist{nolistsep} % Reduce spacing between bullet points and numbered lists
+
+\usepackage{booktabs} % Required for nicer horizontal rules in tables
+
+\usepackage{xcolor} % Required for specifying colors by name
+%\definecolor{ThemeColor}{RGB}{ThemeColor} % is done in main, as it depends on faculty
+
+%TODO wollen wir das so haben? Finde ich persönlich besser - Marcel
+\usepackage[section]{placeins} % Graphics and tables are forced to be set before the beginning of a new section. Althoug this does not work with subsections. But you can use \FloatBarrier before a subsection to prevent this.
+
+%----------------------------------------------------------------------------------------
 % User created custom commands
 %----------------------------------------------------------------------------------------
 
