add missing example references to bibliography.bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,4 +5,20 @@
   url={https://books.google.de/books?id=wWTI-DbeA7gC},
   year={2011},
   publisher={Read How You Want}
+},
+@book{book_key,
+  title={A book about a great thing},
+  author={Person, A. and Person, B.},
+  isbn={9781458725448},
+  url={github.com/PIX3LFLUX/HSK-Latex-Skript-Template},
+  year={2022},
+  publisher={A Publsher}
+},
+@article{article_key,
+  title={A great article about a great thing},
+  author={Person, A. and Person, B.},
+  year={2022},
+  number={1},
+  volume={1},
+  journal={a Journal}
 }
