added rough outline of toc

--- a/00_main.tex
+++ b/00_main.tex
@@ -91,6 +91,8 @@ Das originale Template (the Legrand Orange Book Template) kann hier heruntergela
 %----------------------------------------------------------------------------------------
 
 \input{01_einleitung.tex} 
+\input{02_Vorstellung_der_Abteilung copy.tex}
+\input{03_Das_Projekt.tex}
 
 %----------------------------------------------------------------------------------------
 %	Part 2: Format Examples (to be deleted in final/release version)
