--- a/03_Das_Projekt.tex
+++ b/03_Das_Projekt.tex
@@ -2,12 +2,26 @@
 
 \section{Systemrecorder}
 \subsection{Aufgabenstellung}
+Erarbeitung einer Möglichkeit die Daten nativ auf dem Linux Gerät, als auch im Webbrowser graphisch aufzubereiten, wobei die Konformität an Stilrichtlinien gegeben sein muss.
+Des Weiteren sollte erreicht 
 \subsection{Bisheriger Stand}
 \subsection{Recherche möglicher Lösungen}
-\subsubsection{Webassemmbly - Was ist das?}
+\subsubsection{WebAssembly - Was ist das?}
+Webassembly ist ein vom W3C festgelegter Standard, der einen Bytecode definiert, der in Webbrowsern aber auch außerhalb ausgeführt werden kann. \\
+Die Version 1.0 wurde im März 2017 veröffentlicht und wird seitdem von allen gängigen Browser Engines unterstützt. \\
+Unterstützt wird Webassembly in Chrome seit Chrome 57, in Firefox seit Firefox 52, in Edge seit Edge 16 und in Safari seit Safari 11. \\
+\paragraph*{Vorteile}
+
+\paragraph*{Nachteile}
+\begin{itemize}
+    \item   Aktuell maximal 4 Gibibytes Speicher adressierbar, es gibt ein Proposal, welches aktuell in Entwicklung ist, das zu beheben und dem
+            Webassembly Module die Möglichkeit zu geben 32-Bit oder 64-Bit Speicher Indizes zu nutzen.
+\end{itemize}
+\paragraph*{Analyse der Technologie}
+
 \subsubsection{Tooling : Emscripten}
-\subsubsection{Tooling : Library : SDL}
-\subsection{Durführung}
+\subsubsection{Tooling : Bibliothek : SDL}
+\subsection{Durchführung}
 \subsubsection{Aufbau des Buildsystems}
 \subsection{Gewünschte Funktionen}
 \subsection{Interaktion mit Legacy Code}
