Tabelle eingefügt und angefangen Tagesbeschreibung zu machen

--- a/00_main.tex
+++ b/00_main.tex
@@ -94,6 +94,9 @@ Das originale Template (the Legrand Orange Book Template) kann hier heruntergela
 \input{02_Vorstellung_der_Abteilung copy.tex}
 \input{03_Das_Projekt.tex}
 
+
+\input{07_Kalender.tex}
+
 %----------------------------------------------------------------------------------------
 %	Part 2: Format Examples (to be deleted in final/release version)
 \part{TEIL 2}
