--- a/03_Das_Projekt.tex
+++ b/03_Das_Projekt.tex
@@ -65,6 +65,9 @@ Unterstützt wird Webassembly in Chrome seit Chrome 57, in Firefox seit Firefox 
 
 \section{Dauertestanlage}
 \subsection{Aufgabenstellung}
+\subsubsection{Integrationstest - Was ist das?}
+Ein Integrationstest ist ein bestimmter Vorgang in der Softwareentwicklung oder in der Firmware Entwicklung wie jetzt in dem vorliegenden Fall und dort wird in regelmäßigen Abständen die aktuellste Änderung der Programmfunktionalität geprüft und ob durch die Änderungen bestehende Funktionalitäten gestört werden. Dazu wird in regelmäßigen Abständen, häufig sogenannte Nightly Builds,  ein bestimmter stand des Programmcodes und dessen Funktionalität kompiliert und automatisiert getestet. Bei diesen Tests wird im Gegensatz zum Systemtest nicht die komplette Programmfunktionalität mit allen Eventualitäten geprüft sondern lediglich die Grundfunktionalität der einzelnen Features verifiziert und automatisiert ein Bericht erstellt. hierdurch können neue eingefügte Fehler in der Programmierung, sogenannte Bugs, zeitnah gefunden werden und bevor die Fehlersuche zu aufwendig und unübersichtlich wird diese Fehler behoben werden. man prüft hier nicht die vollständige Funktionalität ab weil das ab einer bestimmten Produktgröße schlicht nicht möglich ist. der so entstandene Bericht wird im Team be- und verarbeitet und am Ende des nächsten Arbeitstages werden die eingecheckten Änderungen am Programmcode erneut automatisiert überprüft.
+
 \subsection{Bisheriger Stand}
 \subsection{Durchführung}
 \subsection{Hardware}
